# poetry-ranking

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/llama_results/: llama_1000.txt  llama_3000.txt  llama_sanity_check.txt
docs/: report.md
poetry_ranking/: eda.ipynb  llama32_evaluate.ipynb  llama_predict.py  main copy.ipynb  main.ipynb  metric_test.ipynb  utils.py
poetry_ranking/old_notebooks/: main copy 2.ipynb  nn_training_snippets.ipynb
